# python-luftdaten

./: .pyup.yml  CHANGES.rst  LICENSE  README.rst  example.py  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml  testing.yml
luftdaten/: __init__.py  exceptions.py
tests/: __init__.py  test_data.py  test_timeout.py
