[tool.poetry]
name = "luftdaten"
version = "0.7.0"
description = "Python API for interacting with luftdaten.info"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/python-luftdaten"
repository = "https://github.com/home-assistant-ecosystem/python-luftdaten"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.20.0"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
pytest = "^6.2.5"
isort = "^5.10.0"
pytest-httpx = "^0.14.0"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
