[tool.poetry]
name = "luftdaten"
version = "0.7.4"
description = "Python API for interacting with luftdaten.info"
authors = ["Fabian Affolter <mail@fabian-affolter.ch>"]
license = "MIT"
homepage = "https://github.com/home-assistant-ecosystem/python-luftdaten"
repository = "https://github.com/home-assistant-ecosystem/python-luftdaten"
readme = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation"
]

[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.28,<1"

[tool.poetry.dev-dependencies]
black = "^25.12"
pytest = "^8"
isort = "^5.11"
pytest-httpx = ">0.15,<1"
pytest-asyncio = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
